--- a/manifest.json
+++ b/manifest.json
@@ -80,7 +80,12 @@
       "sizes": "196x196",
       "type": "image/png",
       "purpose": "any maskable"
+    },
+    {
+      "src": "kpb.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
   "prefer_related_applications": false
-}
+} 
