--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "王小鸭",
   "lang": "en",
   "description": "王小鸭应用安装",
-  "start_url": "https://lovewjb.github.io/website/",
+  "start_url": "https://lovewjb.github.io/",
   "id": "website",
   "background_color": "#f1f1f1",
   "theme_color": "#f1f1f1",
@@ -11,81 +11,81 @@
   "display": "standalone",
   "orientation": "any",
   "icons": [{
-      "src": "android-icon-192x192-seochecker-manifest-5421.png",
+      "src": "img/android-icon-192x192-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "apple-icon-180x180-seochecker-manifest-5421.png",
+      "src": "img/apple-icon-180x180-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "180x180"
     },
     {
-      "src": "apple-icon-152x152-seochecker-manifest-5421.png",
+      "src": "img/apple-icon-152x152-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "152x152"
     },
     {
-      "src": "apple-icon-144x144-seochecker-manifest-5421.png",
+      "src": "img/apple-icon-144x144-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "apple-icon-120x120-seochecker-manifest-5421.png",
+      "src": "img/apple-icon-120x120-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "120x120"
     },
     {
-      "src": "apple-icon-114x114-seochecker-manifest-5421.png",
+      "src": "img/apple-icon-114x114-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "114x114"
     },
     {
-      "src": "favicon-96x96-seochecker-manifest-5421.png",
+      "src": "img/favicon-96x96-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "apple-icon-76x76-seochecker-manifest-5421.png",
+      "src": "img/apple-icon-76x76-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "76x76"
     },
     {
-      "src": "apple-icon-72x72-seochecker-manifest-5421.png",
+      "src": "img/apple-icon-72x72-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "72x72"
     },
     {
-      "src": "apple-icon-60x60-seochecker-manifest-5421.png",
+      "src": "img/apple-icon-60x60-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "60x60"
     },
     {
-      "src": "apple-icon-57x57-seochecker-manifest-5421.png",
+      "src": "img/apple-icon-57x57-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "57x57"
     },
     {
-      "src": "favicon-32x32-seochecker-manifest-5421.png",
+      "src": "img/favicon-32x32-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "32x32"
     },
     {
-      "src": "favicon-16x16-seochecker-manifest-5421.png",
+      "src": "img/favicon-16x16-seochecker-manifest-5421.png",
       "type": "image/png",
       "sizes": "16x16"
     },
     {
-      "src": "icon.png",
+      "src": "img/icon.png",
       "sizes": "196x196",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "kpb.png",
+      "src": "img/kpb.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
   "prefer_related_applications": false
-} 
+}
