--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "王小鸭",
   "lang": "en",
   "description": "王小鸭应用安装",
-  "start_url": "https://lovewjb.github.io/",
+  "start_url": "https://lovewjb.github.io/lovewjb/",
   "id": "website",
   "background_color": "#f1f1f1",
   "theme_color": "#f1f1f1",
